custom error pages, admin orders management, order details

--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -59,7 +59,7 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" th:href="@{/forgot-password-admin}">Forgot Password?</a>
+                                        <a class="small" th:href="@{/forgot-password}">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
                                         <a class="small" th:href="@{/register-admin}">Create an Account!</a>
