--- a/src/main/resources/templates/admin/register.html
+++ b/src/main/resources/templates/admin/register.html
@@ -95,7 +95,7 @@
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" th:href="@{/forgot-password-admin}">Forgot Password?</a>
+                                <a class="small" th:href="@{/forgot-password}">Forgot Password?</a>
                             </div>
                             <div class="text-center">
                                 <a class="small" th:href="@{/login-admin}">Already have an account? Login!</a>
