--- a/src/main/resources/templates/forgot-password-form.html
+++ b/src/main/resources/templates/forgot-password-form.html
@@ -31,11 +31,17 @@
                                     <div th:if = "${type == 'success'}">
                                         <p class = "alert alert-success" th:text = "${detail}"></p>
                                     </div>
-                                    <form class="user" method="get" th:action="@{/request-reset-password}">
+                                    <form class="user" method="post" th:action="@{/reset-password/{id}(id = ${userId})}"
+                                          th:object="${resetPassword}">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address..." name="email">
+                                            <div class="form-group">
+                                                <input type="password" class="form-control form-control-user" name="newPassword"
+                                                       id="newPassword" placeholder="New Password">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="password" class="form-control form-control-user" name="confirmPassword"
+                                                       id="confirmPassword" placeholder="Confirm Password">
+                                            </div>
                                         </div>
                                         <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Reset Password
