forgot password impl, super admin role added

--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -67,6 +67,7 @@
                         </div>
                         <div class="why-text">
                             <h4 th:text="${book.title}"></h4>
+                            <h6 th:text="${book.author}"></h6>
                             <h5 th:text="'đ ' + ${book.price}"></h5>
                         </div>
                     </div>
