--- a/src/main/resources/templates/admin-fragments.html
+++ b/src/main/resources/templates/admin-fragments.html
@@ -281,6 +281,10 @@
                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                     Activity Log
                 </a>
+                <a sec:authorize="hasAuthority('SUPER_ADMIN')" class="dropdown-item" th:href="@{/register-admin}">
+                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Create new Admin
+                </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
